sumo/tests/sumo/errors/routes/disconnected_off/errors.sumo
Warning: Teleporting vehicle '0'; waited too long (wrong lane), lane='beg_0', time=329.00.
Warning: Vehicle '0' ends teleporting on edge 'end', simulation time 329.00.
